# sdavids-project-template

./: .air.toml  .browserslistrc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .golangci.yaml  .hadolint.yaml  .npmrc  .prettierignore  .rustfmt.toml  .yamllint.yaml  CHANGELOG.adoc  CODING_STYLE.adoc  CONTRIBUTING.adoc  Cargo.toml  Dockerfile  README.adoc  REUSE.toml  SECURITY.md  TODO  TODO.adoc  commitlint.config.mjs  eslint.config.mjs  eslint.config.mts  go.mod  jsconfig.json  lighthouserc.ci.yaml  lighthouserc.githook.yaml  lighthouserc.yaml  lint-staged.config.mjs  lint-staged.config.mts  lychee.toml  main.go  package-lock.json  package.json  playwright.config.mts  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
.adr/: adr.properties  default-template.adoc
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post_create.sh
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.husky/: .gitignore  commit-msg  install.mjs  pre-commit  pre-push
cmd/: sdavids-project-template.go
docs/: .editorconfig  .gitattributes  .gitignore  README.adoc
playwright/: tsconfig.json
scripts/: build.sh  build_release.sh  clean.sh  clean_node.sh  create_self_signed_cert.sh  delete_self_signed_cert.sh  dependency_check_node.sh  dependency_check_rust.sh  dev.sh  docker_build.sh  docker_cleanup.sh  docker_health.sh  docker_logs.sh  docker_remove.sh  docker_sh.sh  docker_start.sh  docker_start_secure.sh  docker_stop.sh  format.sh  format_check.sh  git_cleanup.sh  git_delete_branches.sh  hash_filename.sh  latex_pdf_build.sh  lint.sh  lint_fix.sh  lychee.sh  macos_node_modules_fix.sh  pdf_remove_metadata.sh  test.sh  (+6 more)
(+40 files in other folders)
